crates/tlang_parser/tests/snapshots/parser_fn__explicit_tail_recursive_call.snap
---
source: crates/tlang_parser/tests/parser_fn.rs
expression: "parse!(indoc! {\n        \"\n        fn factorial(n) { factorial(n, 1) }\n        fn factorial(0, acc) { acc }\n        fn factorial(n, acc) { rec factorial(n - 1, n * acc) }\n    \"\n    })"
---
Node(
  ast_node: Program([
    Node(
      ast_node: FunctionDeclarations(
        id: SymbolId(6),
        name: Node(
          ast_node: Identifier("factorial"),
          symbol_table: None,
          span: Span(
            start: LineColumn(
              line: 2,
              column: 4,
            ),
            end: LineColumn(
              line: 2,
              column: 13,
            ),
          ),
        ),
        declarations: [
          Node(
            ast_node: FunctionDeclaration(FunctionDeclaration(
              parameters: [
                Node(
                  ast_node: FunctionParameter(
                    id: SymbolId(1),
                    pattern: Node(
                      ast_node: Identifier("n"),
                      symbol_table: None,
                      span: Span(
                        start: LineColumn(
                          line: 0,
                          column: 13,
                        ),
                        end: LineColumn(
                          line: 0,
                          column: 14,
                        ),
                      ),
                    ),
                    type_annotation: None,
                  ),
                  symbol_table: None,
                  span: Span(
                    start: LineColumn(
                      line: 0,
                      column: 0,
                    ),
                    end: LineColumn(
                      line: 0,
                      column: 0,
                    ),
                  ),
                ),
              ],
              guard: None,
              return_type_annotation: None,
              body: Node(
                ast_node: Block([], Some(Node(
                  ast_node: Call(
                    function: Node(
                      ast_node: Identifier("factorial"),
                      symbol_table: None,
                      span: Span(
                        start: LineColumn(
                          line: 0,
                          column: 18,
                        ),
                        end: LineColumn(
                          line: 0,
                          column: 27,
                        ),
                      ),
                    ),
                    arguments: [
                      Node(
                        ast_node: Identifier("n"),
                        symbol_table: None,
                        span: Span(
                          start: LineColumn(
                            line: 0,
                            column: 28,
                          ),
                          end: LineColumn(
                            line: 0,
                            column: 29,
                          ),
                        ),
                      ),
                      Node(
                        ast_node: Literal(Integer(1)),
                        symbol_table: None,
                        span: Span(
                          start: LineColumn(
                            line: 0,
                            column: 31,
                          ),
                          end: LineColumn(
                            line: 0,
                            column: 32,
                          ),
                        ),
                      ),
                    ],
                  ),
                  symbol_table: None,
                  span: Span(
                    start: LineColumn(
                      line: 0,
                      column: 18,
                    ),
                    end: LineColumn(
                      line: 0,
                      column: 33,
                    ),
                  ),
                ))),
                symbol_table: None,
                span: Span(
                  start: LineColumn(
                    line: 0,
                    column: 0,
                  ),
                  end: LineColumn(
                    line: 0,
                    column: 0,
                  ),
                ),
              ),
            )),
            symbol_table: None,
            span: Span(
              start: LineColumn(
                line: 0,
                column: 0,
              ),
              end: LineColumn(
                line: 0,
                column: 0,
              ),
            ),
          ),
          Node(
            ast_node: FunctionDeclaration(FunctionDeclaration(
              parameters: [
                Node(
                  ast_node: FunctionParameter(
                    id: SymbolId(2),
                    pattern: Node(
                      ast_node: Literal(Integer(0)),
                      symbol_table: None,
                      span: Span(
                        start: LineColumn(
                          line: 1,
                          column: 14,
                        ),
                        end: LineColumn(
                          line: 1,
                          column: 15,
                        ),
                      ),
                    ),
                    type_annotation: None,
                  ),
                  symbol_table: None,
                  span: Span(
                    start: LineColumn(
                      line: 0,
                      column: 0,
                    ),
                    end: LineColumn(
                      line: 0,
                      column: 0,
                    ),
                  ),
                ),
                Node(
                  ast_node: FunctionParameter(
                    id: SymbolId(3),
                    pattern: Node(
                      ast_node: Identifier("acc"),
                      symbol_table: None,
                      span: Span(
                        start: LineColumn(
                          line: 1,
                          column: 17,
                        ),
                        end: LineColumn(
                          line: 1,
                          column: 20,
                        ),
                      ),
                    ),
                    type_annotation: None,
                  ),
                  symbol_table: None,
                  span: Span(
                    start: LineColumn(
                      line: 0,
                      column: 0,
                    ),
                    end: LineColumn(
                      line: 0,
                      column: 0,
                    ),
                  ),
                ),
              ],
              guard: None,
              return_type_annotation: None,
              body: Node(
                ast_node: Block([], Some(Node(
                  ast_node: Identifier("acc"),
                  symbol_table: None,
                  span: Span(
                    start: LineColumn(
                      line: 1,
                      column: 24,
                    ),
                    end: LineColumn(
                      line: 1,
                      column: 27,
                    ),
                  ),
                ))),
                symbol_table: None,
                span: Span(
                  start: LineColumn(
                    line: 0,
                    column: 0,
                  ),
                  end: LineColumn(
                    line: 0,
                    column: 0,
                  ),
                ),
              ),
            )),
            symbol_table: None,
            span: Span(
              start: LineColumn(
                line: 0,
                column: 0,
              ),
              end: LineColumn(
                line: 0,
                column: 0,
              ),
            ),
          ),
          Node(
            ast_node: FunctionDeclaration(FunctionDeclaration(
              parameters: [
                Node(
                  ast_node: FunctionParameter(
                    id: SymbolId(4),
                    pattern: Node(
                      ast_node: Identifier("n"),
                      symbol_table: None,
                      span: Span(
                        start: LineColumn(
                          line: 2,
                          column: 14,
                        ),
                        end: LineColumn(
                          line: 2,
                          column: 15,
                        ),
                      ),
                    ),
                    type_annotation: None,
                  ),
                  symbol_table: None,
                  span: Span(
                    start: LineColumn(
                      line: 0,
                      column: 0,
                    ),
                    end: LineColumn(
                      line: 0,
                      column: 0,
                    ),
                  ),
                ),
                Node(
                  ast_node: FunctionParameter(
                    id: SymbolId(5),
                    pattern: Node(
                      ast_node: Identifier("acc"),
                      symbol_table: None,
                      span: Span(
                        start: LineColumn(
                          line: 2,
                          column: 17,
                        ),
                        end: LineColumn(
                          line: 2,
                          column: 20,
                        ),
                      ),
                    ),
                    type_annotation: None,
                  ),
                  symbol_table: None,
                  span: Span(
                    start: LineColumn(
                      line: 0,
                      column: 0,
                    ),
                    end: LineColumn(
                      line: 0,
                      column: 0,
                    ),
                  ),
                ),
              ],
              guard: None,
              return_type_annotation: None,
              body: Node(
                ast_node: Block([], Some(Node(
                  ast_node: RecursiveCall(Node(
                    ast_node: Call(
                      function: Node(
                        ast_node: Identifier("factorial"),
                        symbol_table: None,
                        span: Span(
                          start: LineColumn(
                            line: 2,
                            column: 28,
                          ),
                          end: LineColumn(
                            line: 2,
                            column: 37,
                          ),
                        ),
                      ),
                      arguments: [
                        Node(
                          ast_node: BinaryOp(
                            op: Subtract,
                            lhs: Node(
                              ast_node: Identifier("n"),
                              symbol_table: None,
                              span: Span(
                                start: LineColumn(
                                  line: 2,
                                  column: 38,
                                ),
                                end: LineColumn(
                                  line: 2,
                                  column: 39,
                                ),
                              ),
                            ),
                            rhs: Node(
                              ast_node: Literal(Integer(1)),
                              symbol_table: None,
                              span: Span(
                                start: LineColumn(
                                  line: 2,
                                  column: 42,
                                ),
                                end: LineColumn(
                                  line: 2,
                                  column: 43,
                                ),
                              ),
                            ),
                          ),
                          symbol_table: None,
                          span: Span(
                            start: LineColumn(
                              line: 2,
                              column: 38,
                            ),
                            end: LineColumn(
                              line: 2,
                              column: 43,
                            ),
                          ),
                        ),
                        Node(
                          ast_node: BinaryOp(
                            op: Multiply,
                            lhs: Node(
                              ast_node: Identifier("n"),
                              symbol_table: None,
                              span: Span(
                                start: LineColumn(
                                  line: 2,
                                  column: 45,
                                ),
                                end: LineColumn(
                                  line: 2,
                                  column: 46,
                                ),
                              ),
                            ),
                            rhs: Node(
                              ast_node: Identifier("acc"),
                              symbol_table: None,
                              span: Span(
                                start: LineColumn(
                                  line: 2,
                                  column: 49,
                                ),
                                end: LineColumn(
                                  line: 2,
                                  column: 52,
                                ),
                              ),
                            ),
                          ),
                          symbol_table: None,
                          span: Span(
                            start: LineColumn(
                              line: 2,
                              column: 45,
                            ),
                            end: LineColumn(
                              line: 2,
                              column: 52,
                            ),
                          ),
                        ),
                      ],
                    ),
                    symbol_table: None,
                    span: Span(
                      start: LineColumn(
                        line: 2,
                        column: 28,
                      ),
                      end: LineColumn(
                        line: 2,
                        column: 53,
                      ),
                    ),
                  )),
                  symbol_table: None,
                  span: Span(
                    start: LineColumn(
                      line: 2,
                      column: 24,
                    ),
                    end: LineColumn(
                      line: 2,
                      column: 53,
                    ),
                  ),
                ))),
                symbol_table: None,
                span: Span(
                  start: LineColumn(
                    line: 0,
                    column: 0,
                  ),
                  end: LineColumn(
                    line: 0,
                    column: 0,
                  ),
                ),
              ),
            )),
            symbol_table: None,
            span: Span(
              start: LineColumn(
                line: 0,
                column: 0,
              ),
              end: LineColumn(
                line: 0,
                column: 0,
              ),
            ),
          ),
        ],
      ),
      symbol_table: None,
      span: Span(
        start: LineColumn(
          line: 0,
          column: 0,
        ),
        end: LineColumn(
          line: 2,
          column: 55,
        ),
      ),
    ),
  ]),
  symbol_table: None,
  span: Span(
    start: LineColumn(
      line: 0,
      column: 0,
    ),
    end: LineColumn(
      line: 0,
      column: 0,
    ),
  ),
)
