crates/tlang_parser/tests/snapshots/parser_fn__fn_expression_in_function_completion_position.snap
---
source: crates/tlang_parser/tests/parser_fn.rs
expression: "parse! (\"fn foo() { fn bar() {} }\")"
---
Module(
  id: 2,
  statements: [
    Stmt(
      id: 11,
      kind: FunctionDeclaration(FunctionDeclaration(
        id: 10,
        visibility: Private,
        name: Expr(
          id: 3,
          kind: Path(Path(
            segments: [
              Ident(
                name: "foo",
                span: Span(
                  start: 3,
                  end: 6,
                  start_lc: LineColumn(
                    line: 0,
                    column: 3,
                  ),
                  end_lc: LineColumn(
                    line: 0,
                    column: 6,
                  ),
                ),
              ),
            ],
            res: Unresolved,
            span: Span(
              start: 3,
              end: 6,
              start_lc: LineColumn(
                line: 0,
                column: 3,
              ),
              end_lc: LineColumn(
                line: 0,
                column: 6,
              ),
            ),
          )),
          leading_comments: [],
          trailing_comments: [],
          span: Span(
            start: 3,
            end: 6,
            start_lc: LineColumn(
              line: 0,
              column: 3,
            ),
            end_lc: LineColumn(
              line: 0,
              column: 6,
            ),
          ),
        ),
        type_params: [],
        parameters: [],
        params_span: Span(
          start: 6,
          end: 8,
          start_lc: LineColumn(
            line: 0,
            column: 6,
          ),
          end_lc: LineColumn(
            line: 0,
            column: 8,
          ),
        ),
        guard: None,
        return_type_annotation: None,
        body: Block(
          id: 9,
          statements: [],
          expression: Some(Expr(
            id: 8,
            kind: FunctionExpression(FunctionDeclaration(
              id: 6,
              visibility: Private,
              name: Expr(
                id: 4,
                kind: Path(Path(
                  segments: [
                    Ident(
                      name: "bar",
                      span: Span(
                        start: 14,
                        end: 17,
                        start_lc: LineColumn(
                          line: 0,
                          column: 14,
                        ),
                        end_lc: LineColumn(
                          line: 0,
                          column: 17,
                        ),
                      ),
                    ),
                  ],
                  res: Unresolved,
                  span: Span(
                    start: 14,
                    end: 17,
                    start_lc: LineColumn(
                      line: 0,
                      column: 14,
                    ),
                    end_lc: LineColumn(
                      line: 0,
                      column: 17,
                    ),
                  ),
                )),
                leading_comments: [],
                trailing_comments: [],
                span: Span(
                  start: 14,
                  end: 17,
                  start_lc: LineColumn(
                    line: 0,
                    column: 14,
                  ),
                  end_lc: LineColumn(
                    line: 0,
                    column: 17,
                  ),
                ),
              ),
              type_params: [],
              parameters: [],
              params_span: Span(
                start: 17,
                end: 19,
                start_lc: LineColumn(
                  line: 0,
                  column: 17,
                ),
                end_lc: LineColumn(
                  line: 0,
                  column: 19,
                ),
              ),
              guard: None,
              return_type_annotation: None,
              body: Block(
                id: 5,
                statements: [],
                expression: None,
                span: Span(
                  start: 20,
                  end: 22,
                  start_lc: LineColumn(
                    line: 0,
                    column: 20,
                  ),
                  end_lc: LineColumn(
                    line: 0,
                    column: 22,
                  ),
                ),
              ),
              leading_comments: [],
              trailing_comments: [],
              span: Span(
                start: 11,
                end: 22,
                start_lc: LineColumn(
                  line: 0,
                  column: 11,
                ),
                end_lc: LineColumn(
                  line: 0,
                  column: 22,
                ),
              ),
            )),
            leading_comments: [],
            trailing_comments: [],
            span: Span(
              start: 11,
              end: 22,
              start_lc: LineColumn(
                line: 0,
                column: 11,
              ),
              end_lc: LineColumn(
                line: 0,
                column: 22,
              ),
            ),
          )),
          span: Span(
            start: 9,
            end: 24,
            start_lc: LineColumn(
              line: 0,
              column: 9,
            ),
            end_lc: LineColumn(
              line: 0,
              column: 24,
            ),
          ),
        ),
        leading_comments: [],
        trailing_comments: [],
        span: Span(
          start: 0,
          end: 24,
          start_lc: LineColumn(
            line: 0,
            column: 0,
          ),
          end_lc: LineColumn(
            line: 0,
            column: 24,
          ),
        ),
      )),
      span: Span(
        start: 0,
        end: 24,
        start_lc: LineColumn(
          line: 0,
          column: 0,
        ),
        end_lc: LineColumn(
          line: 0,
          column: 24,
        ),
      ),
      leading_comments: [],
      trailing_comments: [],
    ),
  ],
  span: Span(
    start: 0,
    end: 24,
    start_lc: LineColumn(
      line: 0,
      column: 0,
    ),
    end_lc: LineColumn(
      line: 0,
      column: 24,
    ),
  ),
)
