crates/tlang_parser/tests/snapshots/parser_fn__foldl_impl.snap
---
source: crates/tlang_parser/tests/parser_fn.rs
expression: "parse!(indoc! {\n        \"\n        fn foldl([], acc, _) { acc }\n        fn foldl([x, ...xs], acc, f) { rec foldl(xs, f(acc, x), f) }\n    \"\n    })"
---
Node(
  ast_node: Program([
    Node(
      ast_node: FunctionDeclarations(
        id: SymbolId(9),
        name: Node(
          ast_node: Identifier("foldl"),
          symbol_table: None,
          span: Span(
            start: LineColumn(
              line: 1,
              column: 4,
            ),
            end: LineColumn(
              line: 1,
              column: 9,
            ),
          ),
        ),
        declarations: [
          Node(
            ast_node: FunctionDeclaration(FunctionDeclaration(
              parameters: [
                Node(
                  ast_node: FunctionParameter(
                    id: SymbolId(1),
                    pattern: Node(
                      ast_node: ListPattern([]),
                      symbol_table: None,
                      span: Span(
                        start: LineColumn(
                          line: 0,
                          column: 9,
                        ),
                        end: LineColumn(
                          line: 0,
                          column: 11,
                        ),
                      ),
                    ),
                    type_annotation: None,
                  ),
                  symbol_table: None,
                  span: Span(
                    start: LineColumn(
                      line: 0,
                      column: 0,
                    ),
                    end: LineColumn(
                      line: 0,
                      column: 0,
                    ),
                  ),
                ),
                Node(
                  ast_node: FunctionParameter(
                    id: SymbolId(2),
                    pattern: Node(
                      ast_node: Identifier("acc"),
                      symbol_table: None,
                      span: Span(
                        start: LineColumn(
                          line: 0,
                          column: 13,
                        ),
                        end: LineColumn(
                          line: 0,
                          column: 16,
                        ),
                      ),
                    ),
                    type_annotation: None,
                  ),
                  symbol_table: None,
                  span: Span(
                    start: LineColumn(
                      line: 0,
                      column: 0,
                    ),
                    end: LineColumn(
                      line: 0,
                      column: 0,
                    ),
                  ),
                ),
                Node(
                  ast_node: FunctionParameter(
                    id: SymbolId(3),
                    pattern: Node(
                      ast_node: Wildcard,
                      symbol_table: None,
                      span: Span(
                        start: LineColumn(
                          line: 0,
                          column: 18,
                        ),
                        end: LineColumn(
                          line: 0,
                          column: 19,
                        ),
                      ),
                    ),
                    type_annotation: None,
                  ),
                  symbol_table: None,
                  span: Span(
                    start: LineColumn(
                      line: 0,
                      column: 0,
                    ),
                    end: LineColumn(
                      line: 0,
                      column: 0,
                    ),
                  ),
                ),
              ],
              guard: None,
              return_type_annotation: None,
              body: Node(
                ast_node: Block([], Some(Node(
                  ast_node: Identifier("acc"),
                  symbol_table: None,
                  span: Span(
                    start: LineColumn(
                      line: 0,
                      column: 23,
                    ),
                    end: LineColumn(
                      line: 0,
                      column: 26,
                    ),
                  ),
                ))),
                symbol_table: None,
                span: Span(
                  start: LineColumn(
                    line: 0,
                    column: 0,
                  ),
                  end: LineColumn(
                    line: 0,
                    column: 0,
                  ),
                ),
              ),
            )),
            symbol_table: None,
            span: Span(
              start: LineColumn(
                line: 0,
                column: 0,
              ),
              end: LineColumn(
                line: 0,
                column: 0,
              ),
            ),
          ),
          Node(
            ast_node: FunctionDeclaration(FunctionDeclaration(
              parameters: [
                Node(
                  ast_node: FunctionParameter(
                    id: SymbolId(6),
                    pattern: Node(
                      ast_node: ListPattern([
                        Node(
                          ast_node: IdentifierPattern(
                            id: SymbolId(4),
                            name: "x",
                          ),
                          symbol_table: None,
                          span: Span(
                            start: LineColumn(
                              line: 0,
                              column: 0,
                            ),
                            end: LineColumn(
                              line: 0,
                              column: 0,
                            ),
                          ),
                        ),
                        Node(
                          ast_node: UnaryOp(Rest, Node(
                            ast_node: IdentifierPattern(
                              id: SymbolId(5),
                              name: "xs",
                            ),
                            symbol_table: None,
                            span: Span(
                              start: LineColumn(
                                line: 0,
                                column: 0,
                              ),
                              end: LineColumn(
                                line: 0,
                                column: 0,
                              ),
                            ),
                          )),
                          symbol_table: None,
                          span: Span(
                            start: LineColumn(
                              line: 0,
                              column: 0,
                            ),
                            end: LineColumn(
                              line: 0,
                              column: 0,
                            ),
                          ),
                        ),
                      ]),
                      symbol_table: None,
                      span: Span(
                        start: LineColumn(
                          line: 1,
                          column: 10,
                        ),
                        end: LineColumn(
                          line: 1,
                          column: 20,
                        ),
                      ),
                    ),
                    type_annotation: None,
                  ),
                  symbol_table: None,
                  span: Span(
                    start: LineColumn(
                      line: 0,
                      column: 0,
                    ),
                    end: LineColumn(
                      line: 0,
                      column: 0,
                    ),
                  ),
                ),
                Node(
                  ast_node: FunctionParameter(
                    id: SymbolId(7),
                    pattern: Node(
                      ast_node: Identifier("acc"),
                      symbol_table: None,
                      span: Span(
                        start: LineColumn(
                          line: 1,
                          column: 22,
                        ),
                        end: LineColumn(
                          line: 1,
                          column: 25,
                        ),
                      ),
                    ),
                    type_annotation: None,
                  ),
                  symbol_table: None,
                  span: Span(
                    start: LineColumn(
                      line: 0,
                      column: 0,
                    ),
                    end: LineColumn(
                      line: 0,
                      column: 0,
                    ),
                  ),
                ),
                Node(
                  ast_node: FunctionParameter(
                    id: SymbolId(8),
                    pattern: Node(
                      ast_node: Identifier("f"),
                      symbol_table: None,
                      span: Span(
                        start: LineColumn(
                          line: 1,
                          column: 27,
                        ),
                        end: LineColumn(
                          line: 1,
                          column: 28,
                        ),
                      ),
                    ),
                    type_annotation: None,
                  ),
                  symbol_table: None,
                  span: Span(
                    start: LineColumn(
                      line: 0,
                      column: 0,
                    ),
                    end: LineColumn(
                      line: 0,
                      column: 0,
                    ),
                  ),
                ),
              ],
              guard: None,
              return_type_annotation: None,
              body: Node(
                ast_node: Block([], Some(Node(
                  ast_node: RecursiveCall(Node(
                    ast_node: Call(
                      function: Node(
                        ast_node: Identifier("foldl"),
                        symbol_table: None,
                        span: Span(
                          start: LineColumn(
                            line: 1,
                            column: 36,
                          ),
                          end: LineColumn(
                            line: 1,
                            column: 41,
                          ),
                        ),
                      ),
                      arguments: [
                        Node(
                          ast_node: Identifier("xs"),
                          symbol_table: None,
                          span: Span(
                            start: LineColumn(
                              line: 1,
                              column: 42,
                            ),
                            end: LineColumn(
                              line: 1,
                              column: 44,
                            ),
                          ),
                        ),
                        Node(
                          ast_node: Call(
                            function: Node(
                              ast_node: Identifier("f"),
                              symbol_table: None,
                              span: Span(
                                start: LineColumn(
                                  line: 1,
                                  column: 46,
                                ),
                                end: LineColumn(
                                  line: 1,
                                  column: 47,
                                ),
                              ),
                            ),
                            arguments: [
                              Node(
                                ast_node: Identifier("acc"),
                                symbol_table: None,
                                span: Span(
                                  start: LineColumn(
                                    line: 1,
                                    column: 48,
                                  ),
                                  end: LineColumn(
                                    line: 1,
                                    column: 51,
                                  ),
                                ),
                              ),
                              Node(
                                ast_node: Identifier("x"),
                                symbol_table: None,
                                span: Span(
                                  start: LineColumn(
                                    line: 1,
                                    column: 53,
                                  ),
                                  end: LineColumn(
                                    line: 1,
                                    column: 54,
                                  ),
                                ),
                              ),
                            ],
                          ),
                          symbol_table: None,
                          span: Span(
                            start: LineColumn(
                              line: 1,
                              column: 46,
                            ),
                            end: LineColumn(
                              line: 1,
                              column: 55,
                            ),
                          ),
                        ),
                        Node(
                          ast_node: Identifier("f"),
                          symbol_table: None,
                          span: Span(
                            start: LineColumn(
                              line: 1,
                              column: 57,
                            ),
                            end: LineColumn(
                              line: 1,
                              column: 58,
                            ),
                          ),
                        ),
                      ],
                    ),
                    symbol_table: None,
                    span: Span(
                      start: LineColumn(
                        line: 1,
                        column: 36,
                      ),
                      end: LineColumn(
                        line: 1,
                        column: 59,
                      ),
                    ),
                  )),
                  symbol_table: None,
                  span: Span(
                    start: LineColumn(
                      line: 1,
                      column: 32,
                    ),
                    end: LineColumn(
                      line: 1,
                      column: 59,
                    ),
                  ),
                ))),
                symbol_table: None,
                span: Span(
                  start: LineColumn(
                    line: 0,
                    column: 0,
                  ),
                  end: LineColumn(
                    line: 0,
                    column: 0,
                  ),
                ),
              ),
            )),
            symbol_table: None,
            span: Span(
              start: LineColumn(
                line: 0,
                column: 0,
              ),
              end: LineColumn(
                line: 0,
                column: 0,
              ),
            ),
          ),
        ],
      ),
      symbol_table: None,
      span: Span(
        start: LineColumn(
          line: 0,
          column: 0,
        ),
        end: LineColumn(
          line: 1,
          column: 61,
        ),
      ),
    ),
  ]),
  symbol_table: None,
  span: Span(
    start: LineColumn(
      line: 0,
      column: 0,
    ),
    end: LineColumn(
      line: 0,
      column: 0,
    ),
  ),
)
